<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        
        <variable
            name="data"
            type="corp.bcapc.testitau.model.ContactsData" />
        
        <variable
            name="transferValue"
            type="Double" />
        
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/darker_gray"
    tools:context=".view.TransferFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/fromCard"
        style="@style/DefaultCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/account_origin_label"
                android:id="@+id/accountOriginTv"
                style="@style/DefaulAppearance.Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/selectedAccountBt"
                android:checked="true"
                app:layout_constraintTop_toBottomOf="@+id/accountOriginTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/DefaultRadioButton"
                android:text="@string/balance_account_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                money_unit="@{`R$`}"
                android:text="@{data.valor, default=`R$ 0,00`}"
                android:id="@+id/accountValueTv"
                style="@style/DefaulAppearance"
                android:textSize="32sp"
                app:layout_constraintTop_toBottomOf="@+id/selectedAccountBt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/toCard"
        style="@style/DefaultCard"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/fromCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.core.widget.NestedScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/account_destination_label"
                    android:id="@+id/accountDestinationTv"
                    style="@style/DefaulAppearance.Title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:contentDescription="@string/circle_icon_acc"
                    android:layout_marginTop="@dimen/default_margin"
                    android:id="@+id/roundBackground"
                    android:background="@drawable/round_background"
                    app:layout_constraintTop_toBottomOf="@+id/accountDestinationTv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <ImageView
                    android:contentDescription="@string/person_icon_acc"
                    android:src="@drawable/ic_person_orange_24dp"
                    app:layout_constraintTop_toTopOf="@+id/roundBackground"
                    app:layout_constraintBottom_toBottomOf="@+id/roundBackground"
                    app:layout_constraintStart_toStartOf="@+id/roundBackground"
                    app:layout_constraintEnd_toEndOf="@+id/roundBackground"
                    android:layout_width="35dp"
                    android:layout_height="35dp" />

                <TextView
                    android:text="@{data.name}"
                    android:id="@+id/destinationNameTv"
                    style="@style/DefaulAppearance.Title"
                    tools:text="Carlos Alberto Pereira Caldas"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    app:layout_constraintTop_toTopOf="@+id/roundBackground"
                    app:layout_constraintBottom_toBottomOf="@+id/roundBackground"
                    app:layout_constraintStart_toEndOf="@+id/roundBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    money_unit="@{`R$`}"
                    android:id="@+id/moneyTv"
                    android:text="@{transferValue.toString(), default=`R$ 0,00`}"
                    style="@style/MoneyAppearance"
                    android:layout_marginTop="@dimen/default_margin"
                    android:paddingTop="@dimen/default_margin"
                    android:paddingBottom="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@+id/destinationNameTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:text="@string/plus1_label"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    android:id="@+id/plus1Bt"
                    android:background="@drawable/round_corner_background"
                    app:layout_constraintTop_toBottomOf="@+id/moneyTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/plus5Bt"
                    android:layout_width="80dp"
                    android:layout_height="50dp" />

                <Button
                    android:text="@string/plus5_label"
                    android:id="@+id/plus5Bt"
                    android:background="@drawable/round_corner_background"
                    app:layout_constraintTop_toBottomOf="@+id/moneyTv"
                    app:layout_constraintStart_toEndOf="@+id/plus1Bt"
                    app:layout_constraintEnd_toStartOf="@+id/plus10Bt"
                    android:layout_width="80dp"
                    android:layout_height="50dp" />

                <Button
                    android:text="@string/plus10_label"
                    android:id="@+id/plus10Bt"
                    android:background="@drawable/round_corner_background"
                    app:layout_constraintTop_toBottomOf="@+id/moneyTv"
                    app:layout_constraintStart_toEndOf="@+id/plus5Bt"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="80dp"
                    android:layout_height="50dp" />

                <Button
                    android:text="Limpar Transferência (R$ 0,00)"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:id="@+id/moneyClearBt"
                    android:backgroundTint="@color/money_clear_bt"
                    android:background="@drawable/round_corner_background"
                    app:layout_constraintTop_toBottomOf="@+id/plus5Bt"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/confirm_label"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@drawable/round_corner_background"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintVertical_bias="1"
                    app:layout_constraintTop_toBottomOf="@+id/moneyClearBt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>