<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ContactFragment">

    <data>

        <variable
            name="vm"
            type="corp.bcapc.testitau.viewmodel.UserInfoViewModel" />

        <variable
            name="userInfo"
            type="corp.bcapc.usecase.UserInfo" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/darker_gray">

    <androidx.cardview.widget.CardView
        android:id="@+id/fromCard"
        style="@style/DefaultCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/account_origin_label"
                android:id="@+id/accountOriginTv"
                style="@style/DefaulAppearance.Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/accountRadioGroup"
                android:checkedButton="@+id/balance_bt"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/accountOriginTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/balance_bt"
                    android:layout_weight="0.5"
                    style="@style/DefaultRadioButton"
                    android:text="@string/balance_account_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/savings_bt"
                    android:layout_weight="0.5"
                    android:text="@string/savings_account_label"
                    style="@style/DefaultRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <TextView
                app:account_group="@{accountRadioGroup}"
                app:userinfo="@{userInfo}"
                android:text="@{userInfo.balance, default=`R$ 0,00`}"
                app:money_unit="@{`R$`}"
                android:id="@+id/accountValueTv"
                style="@style/DefaulAppearance"
                android:textSize="32sp"
                app:layout_constraintTop_toBottomOf="@+id/accountRadioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/toCard"
        style="@style/DefaultCard"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/fromCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/account_destination_label"
                android:id="@+id/accountDestinationTv"
                style="@style/DefaulAppearance.Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contactsRv"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@+id/accountDestinationTv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>